# ssl_kick

./: .gitignore  CMakeLists.txt  Node.py  README.md  main.cpp  rrt.py  rrt_star_gui.py  strategy.h
C_plus_plus/: CMakeLists.txt  main.cpp  strategy.cpp  strategy.h
C_plus_plus/plays/: basic_offense.cpp  basic_offense.h  oracle.h  play.cpp  play.h  strategy.cpp  strategy.h
grSim_client/include/google/protobuf/.deps/: any.Plo  any.pb.Plo  api.pb.Plo  arena.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  duration.pb.Plo  dynamic_message.Plo  empty.pb.Plo  extension_set.Plo  extension_set_heavy.Plo  field_mask.pb.Plo  generated_message_reflection.Plo  generated_message_table_driven.Plo  generated_message_table_driven_lite.Plo  generated_message_util.Plo  implicit_weak_message.Plo  map_field.Plo  message.Plo  message_lite.Plo  parse_context.Plo  reflection_ops.Plo  repeated_field.Plo  service.Plo  source_context.pb.Plo  struct.pb.Plo  text_format.Plo  timestamp.pb.Plo  type.pb.Plo  unknown_field_set.Plo  wire_format.Plo  wire_format_lite.Plo  wrappers.pb.Plo
grSim_client/include/google/protobuf/compiler/.deps/: code_generator.Plo  command_line_interface.Plo  importer.Plo  main.Po  parser.Plo  plugin.Plo  plugin.pb.Plo  subprocess.Plo  zip_writer.Plo
grSim_client/include/google/protobuf/compiler/cpp/.deps/: cpp_enum.Plo  cpp_enum_field.Plo  cpp_extension.Plo  cpp_field.Plo  cpp_file.Plo  cpp_generator.Plo  cpp_helpers.Plo  cpp_map_field.Plo  cpp_message.Plo  cpp_message_field.Plo  cpp_padding_optimizer.Plo  cpp_primitive_field.Plo  cpp_service.Plo  cpp_string_field.Plo
grSim_client/include/google/protobuf/compiler/csharp/.deps/: csharp_doc_comment.Plo  csharp_enum.Plo  csharp_enum_field.Plo  csharp_field_base.Plo  csharp_generator.Plo  csharp_helpers.Plo  csharp_map_field.Plo  csharp_message.Plo  csharp_message_field.Plo  csharp_primitive_field.Plo  csharp_reflection_class.Plo  csharp_repeated_enum_field.Plo  csharp_repeated_message_field.Plo  csharp_repeated_primitive_field.Plo  csharp_source_generator_base.Plo  csharp_wrapper_field.Plo
grSim_client/include/google/protobuf/compiler/java/.deps/: java_context.Plo  java_doc_comment.Plo  java_enum.Plo  java_enum_field.Plo  java_enum_field_lite.Plo  java_enum_lite.Plo  java_extension.Plo  java_extension_lite.Plo  java_field.Plo  java_file.Plo  java_generator.Plo  java_generator_factory.Plo  java_helpers.Plo  java_map_field.Plo  java_map_field_lite.Plo  java_message.Plo  java_message_builder.Plo  java_message_builder_lite.Plo  java_message_field.Plo  java_message_field_lite.Plo  java_message_lite.Plo  java_name_resolver.Plo  java_primitive_field.Plo  (+5 more)
grSim_client/include/google/protobuf/io/.deps/: coded_stream.Plo  gzip_stream.Plo  printer.Plo  strtod.Plo  tokenizer.Plo  zero_copy_stream.Plo  zero_copy_stream_impl.Plo  zero_copy_stream_impl_lite.Plo
grSim_client/include/google/protobuf/stubs/.deps/: bytestream.Plo  common.Plo  int128.Plo  mathlimits.Plo  status.Plo  statusor.Plo  stringpiece.Plo  stringprintf.Plo  structurally_valid.Plo  strutil.Plo  substitute.Plo  time.Plo
grSim_client/include/google/protobuf/util/.deps/: delimited_message_util.Plo  field_comparator.Plo  field_mask_util.Plo  json_util.Plo  message_differencer.Plo  time_util.Plo  type_resolver_util.Plo
motion_control/src/: twist_to_motors.py
move_robots/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  move.cpp  moveableobject.cpp  moveableobject.h  network.cpp  network.h  robotFSM.cpp  robotFSM.h  robotcontrols.cpp  robotcontrols.h
move_robots/plays/: basic_offense.cpp  oracle.cpp  oracle.h  play.cpp  play.h
old_code/: Task.msg
old_code/C_plus_plus/: CMakeLists.txt  main.cpp
old_code/C_plus_plus/proto/: task.pb.h  task.proto
old_code/grSim_client/pb/: grSim_Commands.pb.cc  grSim_Commands.pb.h  grSim_Packet.pb.cc  grSim_Packet.pb.h  grSim_Replacement.pb.cc  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_geometry_legacy.pb.cc  messages_robocup_ssl_refbox_log.pb.cc  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper_legacy.pb.cc  messages_robocup_ssl_wrapper_legacy.pb.h
old_code/move_robots/: .network.cpp.swp  CMakeLists.txt  Node.py  README.md  logger.h  main.cpp  move.cpp  move.h  network.cpp  network.h  robocup_ssl_client.h  robotFSM.h  robotcontrols.h  rrt.py  rrt_star_gui.py  strategy.py  timer.h
old_code/move_robots/C_plus_plus/: README.md
old_code/move_robots/C_plus_plus/plays/: basic_offense.h  play.h
old_code/move_robots/C_plus_plus/proto/: task.pb.cc
old_code/move_robots/grSim_client/include/VarTypes/: ui_timewidget.h
old_code/move_robots/grSim_client/pb/: messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper.pb.h
old_code/move_robots/motion_control/: package.xml
old_code/move_robots/plays/: basic_offense.h  oracle.cpp  oracle.h  play.cpp
old_code/move_robots/res/: Parsian.ini
old_code/move_robots/rrtx/: Node.py
old_code/move_robots/turtlesim/src/: buttons.py
old_code/rrtx/: MinHeap.py  rrtx_gui.py
old_code/turtlesim/src/: turtle_frame.cpp
pathPlanner/: Node.h  RRTX.cpp  Visualizer.cpp  main.cpp
rrtx/: CMakeLists.txt  Node.cpp  Node.h  Node.py  RRTX.cpp  RRTX.h  Visualizer.cpp  Visualizer.h  rrtx_gui.py
simulator/: CMakeLists.txt  package.xml
simulator/include/turtlesim/: turtle_frame.h
simulator/launch/: art_simulator.launch  follower_sim.launch  simulator.launch
simulator/src/: buttons.py  turtle_frame.cpp
simulator/srv/: Spawn.srv
src/controls/: main.cpp  moveableobject.cpp  moveableobject.h  robotFSM.cpp  robotFSM.h  robotcontrols.cpp  robotcontrols.h
src/path_planner/: CMakeLists.txt  Node.cpp  README.md  RRTX.cpp  RRTX.h  Visualizer.cpp  grsim_plan.cpp  main.cpp
src/strategy/: basic_offense.cpp  basic_offense.h  oracle.cpp  oracle.h  play.cpp  play.h  strategy_main.cpp
(+30 files in other folders)
